--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,36 @@
     width: 100%;
     background-image: url(../images/jewels-fall-leaves.png);
 }
+
+.parallax {
+    height: 500px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.portfolioContainer {
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+
+}
+
+.portfolioItem {
+    width: 20%;
+    box-shadow: 10px 5px 9px 5px rgba(255, 255, 255, 0.2);
+    transition: 0.3s;
+}
+
+.portfolioItem:hover {
+    box-shadow: 20px 10px 18px 10px rgba(255, 255, 255, 0.2);
+}
+
+.absolute-center {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
