--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,23 @@
 }
 
 .parallax-repeating {
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: contain;
+}
+
+.iconButton {
+    display: flex;
+    justify-content: center;
+}
+
+.iconButton:hover {
+    text-decoration: none;
+
+}
+
+.cardButtonText {
+    margin: auto 0 auto 5px;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
 }
