--- a/css/styles.css
+++ b/css/styles.css
@@ -23,16 +23,33 @@
 }
 
 .portfolioContainer {
-    display: flex;
-    justify-content: space-around;
-    margin: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 35px;
 
 }
 
 .portfolioItem {
-    width: 20%;
+    width: 80%;
+    height: 80%;
+    object-fit: fill;
     box-shadow: 10px 5px 9px 5px rgba(255, 255, 255, 0.2);
     transition: 0.3s;
+    margin: 25px auto auto;
+}
+
+.portfolioItem > img {
+    width: 100%;
+    height: 100%;
+}
+
+.portfolioItem > div {
+    text-align: center;
+    font-family: Brush Script MT, Brush Script Std, cursive;
+    font-size: 30px;
+    margin-top: 10px;
+    color: black;
+    text-shadow: 2px 2px 6px black
 }
 
 .portfolioItem:hover {
@@ -65,5 +82,4 @@
     margin: auto 0 auto 5px;
     font-weight: bold;
     font-size: 20px;
-    color: white;
 }
