--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,38 @@
     font-weight: bold;
     font-size: 20px;
 }
+
+
+.dual-img-card-1 {
+    position: absolute;
+    bottom: 0; 
+    left: 50%; 
+    transform: translateX(-50%);
+}
+
+.dual-img-card-2 {
+    position: absolute;
+    top: 0; 
+    left: 50%; 
+    transform: translateX(-50%);
+}
+
+/* Medium Breakpoint */
+@media (min-width: 767.98px) {
+    .dual-img-card-1 {
+        position: absolute;
+        right: 0; 
+        left: auto;
+        top: 50%; 
+        bottom: auto;
+        transform: translateY(-50%);
+    }
+
+    .dual-img-card-2 {
+        position: absolute;
+        left: 0; 
+        top: 50%; 
+        bottom: auto;
+        transform: translateY(-50%);
+    }
+}
