--- a/scheduling/calendar.css
+++ b/scheduling/calendar.css
@@ -60,10 +60,10 @@ body {font-family: Verdana, sans-serif;}
   color: #777;
 }
 
-.days li .active {
+li.active {
   padding: 5px;
+  color: white !important;
   background: #1abc9c;
-  color: white !important
 }
 
 /* Add media queries for smaller screens */
